--- a/bookstore/src/App.css
+++ b/bookstore/src/App.css
@@ -96,3 +96,16 @@ p {
   font-size: 1em;
   padding: 10px 0 10px 0;
 }
+.bg-image-vertical {
+  position: relative;
+  overflow: hidden;
+  background-repeat: no-repeat;
+  background-position: right center;
+  background-size: auto 100%;
+}
+
+@media (min-width: 1025px) {
+  .h-custom-2 {
+    height: 100%;
+  }
+}
